// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
.emotion-0 {
  border-radius: 6px;
}

<InfoBox
  appearance="default"
  className="emotion-0"
  message="message"
  onDismiss={[MockFunction]}
/>
`;

exports[`InfoBox InfoBoxBanner renders default 1`] = `
.emotion-0 {
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

<InfoBox
  appearance="default"
  className="emotion-0"
  message="message"
  onDismiss={[MockFunction]}
/>
`;

exports[`InfoBox renders default 1`] = `
.emotion-0 {
  cursor: pointer;
  line-height: 0;
  opacity: 0.5;
}

.emotion-1 {
  background-color: #DADDE2;
  border-bottom-color: #828487;
  color: #1B2029;
  grid-gap: 16px;
  grid-template-columns: 1fr auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px;
  font-size: 12px;
  display: grid;
  font-weight: 500;
}

<div
  aria-live="polite"
  className="emotion-1"
  data-cy="infoBox"
  role="log"
>
  <div>
    message
  </div>
  <Clickable
    action={[Function]}
    disableFocusOutline={false}
    role="button"
    tabIndex={0}
  >
    <span
      className="emotion-0"
    >
      <Icon
        color="#1B2029"
        shape="system-close"
        size="16px"
      />
    </span>
  </Clickable>
</div>
`;

exports[`InfoBox renders with JSX message 1`] = `
.emotion-0 {
  cursor: pointer;
  line-height: 0;
  opacity: 0.5;
}

.emotion-1 {
  background-color: #DADDE2;
  border-bottom-color: #828487;
  color: #1B2029;
  grid-gap: 16px;
  grid-template-columns: 1fr auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px;
  font-size: 12px;
  display: grid;
  font-weight: 500;
}

<div
  aria-live="polite"
  className="emotion-1"
  data-cy="infoBox"
  role="log"
>
  <div>
    <MessageComponent />
  </div>
  <Clickable
    action={[Function]}
    disableFocusOutline={false}
    role="button"
    tabIndex={0}
  >
    <span
      className="emotion-0"
    >
      <Icon
        color="#1B2029"
        shape="system-close"
        size="16px"
      />
    </span>
  </Clickable>
</div>
`;

exports[`InfoBox renders with actions 1`] = `
.emotion-0 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.emotion-3 {
  cursor: pointer;
  line-height: 0;
  opacity: 0.5;
}

.emotion-4 {
  background-color: #DADDE2;
  border-bottom-color: #828487;
  color: #1B2029;
  grid-gap: 16px;
  grid-template-columns: 1fr auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px;
  font-size: 12px;
  display: grid;
  font-weight: 500;
}

@media (min-width:600px) {
  .emotion-4 {
    grid-template-columns: auto 1fr auto;
  }
}

.emotion-2 {
  grid-row-start: 2;
  grid-column: span 2;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

@media (min-width:600px) {
  .emotion-2 {
    grid-row-start: auto;
    grid-column: auto;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

.emotion-1 {
  padding-right: 16px;
}

<div
  aria-live="polite"
  className="emotion-4"
  data-cy="infoBox"
  role="log"
>
  <div>
    message
  </div>
  <div
    className="emotion-2"
    data-cy="infoBox-actions"
  >
    <span
      className="emotion-0"
    >
      <Component />
    </span>
    <span
      className="emotion-1"
    >
      <Component />
    </span>
  </div>
  <Clickable
    action={[Function]}
    disableFocusOutline={false}
    role="button"
    tabIndex={0}
  >
    <span
      className="emotion-3"
    >
      <Icon
        color="#1B2029"
        shape="system-close"
        size="16px"
      />
    </span>
  </Clickable>
</div>
`;

exports[`InfoBox renders without dismiss button 1`] = `
.emotion-0 {
  background-color: #DADDE2;
  border-bottom-color: #828487;
  color: #1B2029;
  grid-gap: 16px;
  grid-template-columns: 1fr auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px;
  font-size: 12px;
  display: grid;
  font-weight: 500;
}

<div
  aria-live="polite"
  className="emotion-0"
  data-cy="infoBox"
  role="log"
>
  <div>
    message
  </div>
</div>
`;
